tests/data/bad/bad_init.py
from __future__ import annotations

from cfg import CN

cfg = CN("Bad")
